--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
         <head>
             <meta name="viewport" content="width=device-width", initial-scale="1">
             <title>Login | PESANKU - Pemerintah Provinsi Lampung</title>
-            <link rel="stylesheet" href="">
         </head>
 
-        <body>
+        <body style="background-image: url('assets/chat-icon.png');">
             <header>
-                <div id="text-email-login" class="position-absolute" style="top: 10%; font-weight: bold; font-size:2rem; max-width: 600px;line-height: 1">
-                    <p class="text-left" style=""></p>
+                <div id="text-email-login" class="position-absolute">
+                    <p class="first-text-left" style="color: #FFFFFF; position: absolute; width:127px; height:84px; left: 126px; top:122px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: bold; font-size: 72px; line-height: 84px;">Hai,</p>
+                    <p class="first-text-left" style="color: #FFFFFF; position: absolute; width:465px; height:42px; left:128px; top:203px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: 500; font-size: 36px; line-height: 42px">Selamat Datang di PESANKU</p>
+                </div>
+                <div class="big-chat-icon" style="background-image: url('assets/big-chat-icon.png'); position: absolute; width: 332px; height: 332px; left: 253px; top: 356px;"></div>
+                <div id="text-service-explanation">
+                    <p class="long-text" style="color: #FFFFFF; position: absolute; width: 592px; height: 84px; left: 148px; top: 784px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: normal; font-size: 18px; line-height: 21px; text-align: center;">
+                        Layanan surat elektronik untuk Perangkat Daerah dan 
+                        Pegawai Negeri Sipil di lingkungan instansi Pemerintah Provinsi Lampung 
+                        sesuai dengan Surat Edaran Menteri Negara Pendayagunaan 
+                        Aparatur Negara dan Reformasi Birokrasi Nomor 06 Tahun 2013.
+                    </p> 
                 </div>
             </header>
         </body>
