--- a/index.html
+++ b/index.html
@@ -1,25 +1,61 @@
 <!DOCTYPE html>
-    <html lang="id">
-        <head>
-            <meta name="viewport" content="width=device-width", initial-scale="1">
-            <title>Login | PESANKU - Pemerintah Provinsi Lampung</title>
-        </head>
 
-        <body style="background-image: url('assets/chat-icon.png');">
-            <header>
-                <div id="text-email-login" class="position-absolute">
-                    <p class="first-text-left" style="color: #FFFFFF; position: absolute; width:127px; height:84px; left: 126px; top:122px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: bold; font-size: 72px; line-height: 84px;">Hai,</p>
-                    <p class="first-text-left" style="color: #FFFFFF; position: absolute; width:465px; height:42px; left:128px; top:203px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: 500; font-size: 36px; line-height: 42px">Selamat Datang di PESANKU</p>
+<html lang="id">
+    <head>
+        <meta name="viewport" content="width=device-width", initial-scale="1">
+        <title>Login | PESANKU - Pemerintah Provinsi Lampung</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body style="background-image: url('assets/chat-icon.png');">
+        <header>
+            <div id="text-email-login" class="position-absolute">
+                <p class="first-text-left" style="color: #FFFFFF; position: absolute; width:127px; height:84px; left: 126px; top:122px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: bold; font-size: 72px; line-height: 84px;">Hai,</p>
+                <p class="first-text-left" style="color: #FFFFFF; position: absolute; width:465px; height:42px; left:128px; top:203px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: 500; font-size: 36px; line-height: 42px">Selamat Datang di PESANKU</p>
+            </div>
+        </header>
+
+        <explain>
+            <div class="big-chat-icon" style="background-image: url('assets/big-chat-icon.png'); position: absolute; width: 332px; height: 332px; left: 253px; top: 356px;"></div>
+            <div id="text-service-explanation">
+                <p class="long-text" style="color: #FFFFFF; position: absolute; width: 592px; height: 84px; left: 148px; top: 784px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: normal; font-size: 18px; line-height: 21px; text-align: center;">
+                    Layanan surat elektronik untuk Perangkat Daerah dan 
+                    Pegawai Negeri Sipil di lingkungan instansi Pemerintah Provinsi Lampung 
+                    sesuai dengan Surat Edaran Menteri Negara Pendayagunaan 
+                    Aparatur Negara dan Reformasi Birokrasi Nomor 06 Tahun 2013.
+                </p>
+            </div>
+        </explain>
+        
+        <main>
+            <div id="blue-circle"  style="position: absolute; width: 300px; height: 268px; left: -110px; top: 909px; background: linear-gradient(36.6deg, #165486 56.82%, rgba(25, 133, 156, 0) 80.79%), linear-gradient(0deg, #29A7C2, #29A7C2), #29A7C2;"></div>
+            <div class="sign-up" style="position: absolute; width: 200px; height: 40px; left: 1121px; top: 122px; background: #F2F2F2; border-radius: 5px;"></div>
+            <div class="sign-up" style="position: absolute; width: 50px; height: 16.8px; left: 1246px; top: 132px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: 500; font-size: 18px; line-height: 21px; color: #353535; text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);">
+                <p>Daftar</p>
+            </div>
+            <div class="sign-in" style="position: absolute; width: 105px; height: 40px; left: 1121px; top: 122px; background: #29A7C2; box-shadow: 0px 0px 10px rgba(47, 192, 247, 0.15); border-radius: 5px;"> </div>
+            <div class="sign-in" style="color: #FFFFFF; position: absolute; width: 55px; height: 16.8px; left: 1146px; top: 132px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: 500; font-size: 18px; line-height: 21px; line-height: 21px;">
+                <p>Masuk</p>
+            </div>
+            <div id="forms">
+                <div class="white-background" style="position: absolute; width: 380px; height: 593px; left: 941px; top: 225px; background: #FFFFFF; box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.08); border-radius: 25px;"></div>
+                <div class="first-vector" style="position: absolute; width: 376px; height: 105px; left: 941px; top: 225px; background: #051929;"></div>
+                <div class="second-vector" style="position: absolute; width: 380.03px; height: 120.99px; left: 941px; top: 236px; background: #0A2741;"></div>
+                <div class="fill" style="position: absolute; width: 63px; height: 106px; left: 1189px; top: 239px; background: url('assets/Provinsi-Lampung-removebg-preview\ 2.png')"></div>
+                <div class="subtitle" style="position: absolute; width: 157px; height: 47px; left: 982px; top: 362px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: 900; font-size: 40px; line-height: 47px; color: #091D30;">
+                    <p>Pesanku</p>
                 </div>
-                <div class="big-chat-icon" style="background-image: url('assets/big-chat-icon.png'); position: absolute; width: 332px; height: 332px; left: 253px; top: 356px;"></div>
-                <div id="text-service-explanation">
-                    <p class="long-text" style="color: #FFFFFF; position: absolute; width: 592px; height: 84px; left: 148px; top: 784px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-style: normal; font-weight: normal; font-size: 18px; line-height: 21px; text-align: center;">
-                        Layanan surat elektronik untuk Perangkat Daerah dan 
-                        Pegawai Negeri Sipil di lingkungan instansi Pemerintah Provinsi Lampung 
-                        sesuai dengan Surat Edaran Menteri Negara Pendayagunaan 
-                        Aparatur Negara dan Reformasi Birokrasi Nomor 06 Tahun 2013.
-                    </p> 
+                <div id="rectangles" style="position: absolute; width: 300px; height: 54px; left: 982px; top: 472px; background: #FFFFFF; border: 1px solid #D2D2D2; box-sizing: border-box; box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1); border-radius: 5px;">
+                    <div class="email" style="position: absolute; width: 142px; height: 24px; left: 1004px; top: 490px;">
+                        <p>Alamat E-Mail</p>
+                    </div>
                 </div>
-            </header>
-        </body>
-    </html>
+                <div id="rectangles" style="position: absolute; width: 300px; height: 54px; left: 982px; top: 472px; background: #FFFFFF; border: 1px solid #D2D2D2; box-sizing: border-box; box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1); border-radius: 5px;">
+                    <div class="password" style="position: absolute; width: 142px; height: 24px; left: 1004px; top: 490px;">
+                        <p>Kata Sandi</p>
+                    </div>
+                </div>
+            </main>
+        
+    </body>
+</html>
