--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         </explain>
         
         <main>
-            <div class="blue-circle">
+            <!-- <div class="blue-circle">
                 <img src="assets/elips.png";>
-            </div>
+            </div> -->
 
             <div class="sign-up">
                 <div class="sign-up-2">
@@ -77,12 +77,13 @@
                 <input type="submit" value="Let's Go!">
                 
 
-                <div class="forgot-password" id="popup-1">
-                    <div class="overlay"></div>
+                <div class="forgot-password">
+                    <p><a>Lupa Kata Sandi?</a></p>
+                    <!-- <div class="overlay"></div>
                     <div class="content">
                         <div class="close-btn" onclick="togglePopup()"></div>
                         <p><a href="popup.js/togglePopup()">Lupa Kata Sandi?</a></p>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="number-of-ASN">
